tests/requests/invalid/chunked_03.py
from gunicorn.http.errors import UnsupportedTransferCoding
request = UnsupportedTransferCoding
